--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
 @charset "UTF-8";
+@import url("reset.css");
+@import url("common.css");
+@import url("header.css");
+@import url("mainvisual.css");
+@import url("about.css");
+@import url("voice.css");
+@import url("reason.css");
+@import url("study.css");
+@import url("flow.css");
+@import url("instructors.css");
+@import url("support.css");
+@import url("price.css");
+@import url("footer.css");
 
 html {
   font-size: 100%;
 }
-
-
