“サポート追加”

--- a/css/style.css
+++ b/css/style.css
@@ -307,11 +307,17 @@ main {
 
 /* instructors */
 
-/* support */
+/* ==============================
+support
+============================== */
 
-/* price */
+/* ==============================
+price
+============================== */
 
-/* footer */
+/* ==============================
+footer
+============================== */
 
 /* レスポンシブ */
 @media (max-width: 768px) {
