--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,15 @@ main {
 }
 
 /* study */
+#study .study-characters img {
+  width: 480px;
+  height: 300px;
+}
 
+#study .study-phones img {
+  width: 300px;
+  height: 480px;
+}
 /* flow */
 
 /* instructors */
