--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,10 @@ support
   width: 100%;
 }
 
+.support-head-bg img {
+  display: block;
+}
+
 .support {
   background-color: #EBF5E0;
 }
@@ -480,7 +484,8 @@ support
 
 .support-title-box {
   text-align: center;
-  padding-block: 100px;
+  /* padding-block: 100px; */
+  padding-bottom: 100px;
 }
 
 .support-title {
@@ -581,7 +586,20 @@ support
   box-shadow: 0 7px 20px rgba(0,0,0,0.1);
 }
 
+/* スライダー */
+.support-slider img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  /* border-radius: 10px; */
+}
 
+.support-slider {
+  padding-inline: 50px;
+}
+.support-slider .slick-slide {
+  padding: 0 20px;
+}
 
 /* ==============================
 price
@@ -590,6 +608,11 @@ price
 /* ==============================
 footer
 ============================== */
+
+
+
+
+
 
 /* レスポンシブ */
 @media (max-width: 768px) {
