--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,40 @@ main {
   height: 400px;
 }
 /* flow */
+#flow {
+  margin-bottom: 50px;
+}
+
+.flow-container {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+
+.flow-item,
+.flow-item3,
+.flow-item5 {
+  border: 1px solid #99cc65;
+  padding: 5px;
+}
+
+.flow-item2,
+.flow-item4 {
+  border: 1px solid #99cc65;
+  border: 1px solid rgba(153, 204, 101, 0.2);
+  background-color: #99cc65;
+  background-color: rgba(153, 204, 101, 0.2);
+}
+
+.item-title {
+  padding-bottom: 5px;
+}
+
+#flow img {
+  width: 200px;
+  height: 100px;
+  margin: 5px 0;
+}
 
 /* instructors */
 
