--- a/css/style.css
+++ b/css/style.css
@@ -479,9 +479,15 @@ main {
 
 /* study */
 #study {
-  margin: 20px 0;
-  padding: 30px 0;
   background-color: #fffaed;
+}
+
+#study svg {
+  display: block;
+  background-color: white;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
 }
 
 .study-text {
@@ -618,6 +624,7 @@ main {
 
 #instructors img {
   width: 35%;
+  filter: drop-shadow(0px 6px 3px rgba(0,0,0,0.25));
 }
 
 .instructors-item img,
