--- a/css/style.css
+++ b/css/style.css
@@ -223,34 +223,6 @@ img {
 /* ================================
   ハンバーガーメニュー
 ================================ */
-.hamburger {
-  display: none; /* PCでは非表示 */
-  width: 30px;
-  height: 22px;
-  flex-direction: column;
-  justify-content: space-between;
-  cursor: pointer;
-  z-index: 1100;
-}
-
-.hamburger span {
-  display: block;
-  height: 3px;
-  background: #00a9ff;
-  border-radius: 2px;
-  transition: 0.3s;
-}
-
-/* 開いた時 */
-.hamburger.active span:nth-child(1) {
-  transform: translateY(9px) rotate(45deg);
-}
-.hamburger.active span:nth-child(2) {
-  opacity: 0;
-}
-.hamburger.active span:nth-child(3) {
-  transform: translateY(-9px) rotate(-45deg);
-}
 
 /* main */
 main {
@@ -378,6 +350,11 @@ main {
 .about-img img {
   width: 100%;
   border-top-right-radius: 80px;
+}
+
+/* about下 無料カウンセリングボタン */
+.about-btn {
+  display: none;
 }
 
 /* voice */
@@ -813,7 +790,7 @@ pronavi logo  our 背景に固定
   font-size: 20vw;
   font-weight: 700;
   color: rgba(120, 120, 120, 0.05);
-  z-index: 0;      /* 完全に背景にする */
+  z-index: 0; /* 完全に背景にする */
   pointer-events: none;
   white-space: nowrap;
   opacity: 0;
@@ -821,7 +798,7 @@ pronavi logo  our 背景に固定
 }
 
 .bg-logo p.show {
-  opacity: 1;       /* support に到達したら表示 */
+  opacity: 1; /* support に到達したら表示 */
 }
 
 section,
@@ -831,7 +808,6 @@ section,
   position: relative;
   z-index: 1;
 }
-
 
 /* ------------------------------
 卒業生の実績 graduate-achievements
@@ -1124,7 +1100,7 @@ footer {
 }
 
 .footer-info {
-  background-color: #77D1ff;
+  background-color: #77d1ff;
 }
 
 .footer-info .section-wrapper {
@@ -1135,7 +1111,7 @@ footer {
 }
 
 .footer-copy-box {
-  background-color: #77D1ff;
+  background-color: #77d1ff;
 }
 
 .footer-copy {
@@ -1186,12 +1162,12 @@ footer {
   text-align: center;
   text-decoration: none;
   z-index: 999;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 
   display: flex;
-  flex-direction: column;      /* 縦並び */
-  align-items: center;         /* 横中央 */
-  justify-content: center;     /* 縦中央 */
+  flex-direction: column; /* 縦並び */
+  align-items: center; /* 横中央 */
+  justify-content: center; /* 縦中央 */
 
   opacity: 0;
   pointer-events: none;
@@ -1202,7 +1178,7 @@ footer {
 .button_top::before {
   content: "⌃";
   font-size: 26px;
-  margin-bottom: 2px;     /* 矢印とTOPの間隔 */
+  margin-bottom: 2px; /* 矢印とTOPの間隔 */
   line-height: 1;
 }
 
@@ -1211,10 +1187,6 @@ footer {
   opacity: 1;
   pointer-events: auto;
 }
-
-
-
-
 
 /* ==============================
 レスポンシブ
@@ -1230,134 +1202,194 @@ footer {
     height: auto;
   }
 
-
   /* header */
-  /* スマホでナビ非表示 */
-  /* #header {
-  display:flex;
-}
-  .header-right {
-    position: fixed;
-    top: 80px;
-    right: -100%;
-    width: 40%;
-    height: 100vh;
-    background: #363535be;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 40px 20px;
-    gap: 20px;
-    transition: right 0.3s ease;
-  }
-
-
-  .header-right.open {
-    right: 0;
-  }
-
+  /*ハンバーガーメニュー*/
   .nav-menu ul {
     flex-direction: column;
-    gap: 20px;
+    /* align-items: center;
+    gap: 36px;
+    list-style: none;
+    margin: 0;
+    padding: 0; */
+  }
+  .header-right {
+    flex-direction: column;
+    width: 400px;
+    background-color: #fff;
+    padding: 60px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: -300px;
+    opacity: 0;
+    transition: 0.5s;
+    z-index: 20;
+    overflow-y: auto;
+  }
+
+  .open .header-right {
+    opacity: 1;
+    left: 0;
   }
 
   .hamburger {
-    display: flex;
-  } */
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    position: fixed;
+    top: 22px;
+    right: 18px;
+    z-index: 20;
+    transition: 0.5s;
+  }
 
+  .hamburger span {
+    width: 30px;
+    height: 2px;
+    background-color: #00a9ff;
+    display: block;
+    position: absolute;
+    left: 0;
+    transition: 0.5s;
+  }
+  .hamburger span:nth-child(1) {
+    top: 4px;
+  }
+
+  .hamburger span:nth-child(2) {
+    top: 14px;
+  }
+
+  .hamburger span:nth-child(3) {
+    bottom: 4px;
+  }
+
+  .open .hamburger span {
+    background-color: #fff;
+  }
+
+  .open .hamburger span:nth-child(1) {
+    transform: translateY(10px) rotate(-45deg);
+  }
+
+  .open .hamburger span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .open .hamburger span:nth-child(3) {
+    transform: translateY(-10px) rotate(45deg);
+  }
+
+  #mask {
+    display: none;
+    transition: 0.5s;
+  }
+
+  .open #mask {
+    background-color: #000;
+    opacity: 0.8;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+  }
 
   /* main */
   /* mainvisual */
   .mainvisual {
-  display: flex;
-  justify-content: flex-end; /* heroを右寄せ */
-  padding-left: 0;
-}
+    display: flex;
+    justify-content: flex-end; /* heroを右寄せ */
+    padding-left: 0;
+  }
 
-.main-text h2 {
-  font-size: 60px; /* figmaより大きめに */
-  color: #99cc65;
-  line-height: 1.5;
-  margin-bottom: 60px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(255, 255, 255, 0.2);
-}
+  .main-text h2 {
+    font-size: 60px; /* figmaより大きめに */
+    color: #99cc65;
+    line-height: 1.5;
+    margin-bottom: 60px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3),
+      0 0 10px rgba(255, 255, 255, 0.2);
+  }
 
-.main-text h2 span {
-  color: #a3e082;
-  padding-left: 40px;
-}
+  .main-text h2 span {
+    color: #a3e082;
+    padding-left: 40px;
+  }
 
-.main-text .btn {
-  margin-top: 0;
-}
+  .main-text .btn {
+    margin-top: 0;
+  }
 
-.mainvisual-items img {
-  width: 80px; 
-}
+  .mainvisual-items img {
+    width: 80px;
+  }
 
-/* 個別の位置調整 */
-.rate-1 {
-  top: 30px;
-  left: 30px;
-}
+  .hero {
+    background-position: center;
+  }
 
-.rate-2 {
-  top: 30px;
-  left: 120px;
-}
-
-.rate-3 {
-  top: 30px;
-  left: 210px;
-}
+  /* フェード用の重ねるdiv */
+  .fade-bg {
+    background-position: center;
+  }
 
   /* about */
   .about-inner {
-  flex-direction: column;
-  /* align-items: center;
-  justify-content: space-between;
-  gap: 60px;
-  margin-top: 60px; */
-}
+    flex-direction: column;
+  }
 
-.about-text {
-  width: 100%;
-}
+  .about-text {
+    width: 100%;
+  }
 
+  .about-lead {
+    font-size: 16px;
+  }
 
-.about-img {
-  width: 100%;
-}
+  .about-img {
+    width: 100%;
+  }
 
-.about-img img {
-  width: 100%;
-  border-top-right-radius: 80px;
-}
+  .about-img img {
+    width: 100%;
+    border-top-right-radius: 80px;
+  }
+
+  .about-btn {
+    display: block;
+    width: 80%;
+    margin-top: 80px;
+  }
 
   /* voice */
-.voice-list {
-  flex-direction: column;
-  gap: 60px;
-  margin-top: 80px;
-}
+  .voice-list {
+    flex-direction: column;
+    gap: 60px;
+    margin-top: 80px;
+  }
 
-.voice-item {
-  width: 100%;
-}
+  .voice-item {
+    width: 100%;
+  }
 
-.voice-box {
-  padding: 10px;
-  min-height: 180px;
-}
+  .voice-box {
+    padding: 10px;
+    min-height: 180px;
+  }
 
-.voice-age {
-  text-align: left;
-  margin-bottom:30px;
-  margin-left: 80px;
-}
+  .voice-age {
+    text-align: left;
+    margin-bottom: 30px;
+    margin-left: 80px;
+  }
 
-.voice-text {
-  text-align: left;
-}
+  .voice-text {
+    text-align: left;
+  }
 
   /* reason */
 
@@ -1442,22 +1474,22 @@ support
 
   /* ------------------------------
 /* 背景ロゴ設置 */
-/* .bg-logo p { */
+  /* .bg-logo p { */
   /* font-size: 25vw; */
-/* } */
+  /* } */
 
-/* やはり不要 */
-.bg-logo p {
+  /* やはり不要 */
+  .bg-logo p {
     display: none;
-}
+  }
 
-.support-btn {
-  display: block;
-  width: 80%;
-  margin-top: 80px;
-}
+  .support-btn {
+    display: block;
+    width: 80%;
+    margin-top: 80px;
+  }
 
-/* ------------------------------
+  /* ------------------------------
 卒業生の実績
 ------------------------------ */
 
@@ -1527,7 +1559,5 @@ footer
 
 /* ページトップボタン削除 */
 .button_top {
-    display: none !important;
-  }
-
+  display: none !important;
 }
